Fix table width sizing and long field truncation

--- a/ui/src/app/job-list/job-list.component.css
+++ b/ui/src/app/job-list/job-list.component.css
@@ -1,5 +1,8 @@
 .table-container {
   position: relative;
+  overflow: scroll;
+  width: 100%;
+  height: 100%;
 }
 
 .spinner-container {
@@ -13,7 +16,8 @@
 }
 
 .job-list-table {
-  display: block;
+  display: inline-block;
+  width: 100%;
 }
 
 /* The pagination controls are near the top, so position relatively high. */
